<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f6f6fc"
    tools:context=".presenter.health_report">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="610dp"


            android:background="@drawable/reports"
            />
    </LinearLayout>


    <LinearLayout
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:orientation="vertical"
        android:layout_marginLeft="30dp"
        android:id="@+id/radioGroups">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="60dp"
            android:text="1.) Do you have any of the following symptom/s ?"
            android:textColor="#ac0029"
            />


        <CheckBox
            android:id="@+id/checkBox2"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:alpha="1"
            style="@style/custom_checkbox"
            android:text="@string/checkBox2" />

        <CheckBox
            android:id="@+id/checkBox3"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            style="@style/custom_checkbox"
            android:text="@string/checkBox3" />

        <CheckBox
            android:id="@+id/checkBox4"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            style="@style/custom_checkbox"
            android:text="@string/checkBox4" />

        <CheckBox
            android:id="@+id/checkBox5"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            style="@style/custom_checkbox"
            android:text="@string/checkBox5" />

        <CheckBox
            android:id="@+id/checkBox6"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            style="@style/custom_checkbox"

            android:text="@string/checkBox6" />

        <CheckBox
            android:id="@+id/checkBox7"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            style="@style/custom_checkbox"
            android:text="@string/checkBox7" />
        <CheckBox
            android:id="@+id/checkBox8"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            style="@style/custom_checkbox"
            android:text="Sore throat" />


    </LinearLayout>
    <TextView
        android:layout_width="270dp"
        android:layout_height="35dp"
        android:id="@+id/androids"
        android:layout_below="@+id/radioGroups"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="30dp"
        android:textColor="#ac0029"
        android:text="2.) Do you have a pending COVID-19 Test results?"

        />


    <TextView
        android:layout_width="270dp"
        android:layout_height="50dp"
        android:id="@+id/androidss"
        android:layout_below="@+id/radioGroup_two"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="30dp"
        android:textColor="#ac0029"
        android:text="3.) Have you been exposed to a sick person or suspect, probable or Confimed Covid-19 Cases in the past 14 days?"

        />
    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_marginLeft="30dp"
        android:gravity="center"
        android:layout_below="@+id/androidss"
        android:orientation="horizontal"
        android:id="@+id/two"
        android:layout_width="wrap_content"

        android:layout_height="wrap_content" >
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/radioGroups_two">

            <RadioButton
                android:id="@+id/Yes"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="  Yes"
                style="@style/custom_checkbox"
                android:checked="false" />
            <Space
                android:layout_width="10dp"
                android:layout_height="10dp">

            </Space>

            <RadioButton
                android:id="@+id/No"
                android:layout_width="fill_parent"
                style="@style/custom_checkbox"
                android:layout_height="wrap_content"
                android:text="  No"
                android:checked="false"
 />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_below="@+id/androidss"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="10dp"
        android:gravity="right"
        >
    <Button
        android:id="@+id/button_apply"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:textColor="#F0F1F4"
        android:background= "@drawable/rdred"

        android:text="Save" />
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="64dp"
        android:gravity="center"

        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/resulta"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rd_white"
            android:textAlignment="center"
            android:textStyle="bold"

            android:hint=""
            android:textColor="@color/black"
            android:textSize="30sp" />



    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_marginLeft="30dp"
        android:gravity="center"
        android:layout_below="@+id/androids"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:id="@+id/radioGroup_two"
        android:layout_height="wrap_content" >
    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        android:id="@+id/radioGroup">

        <RadioButton
            android:id="@+id/radioMale"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"

            android:text="  Yes"

            style="@style/custom_checkbox"
            android:checked="false"
 />
        <Space
            android:layout_width="10dp"
            android:layout_height="10dp">

        </Space>

        <RadioButton
            android:id="@+id/radioFemale"
            android:layout_width="fill_parent"
            style="@style/custom_checkbox"
            android:layout_height="wrap_content"
            android:text="  No"

            android:checked="false"

             />
    </RadioGroup>
    </LinearLayout>
</RelativeLayout>